add quote service
